--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-express-auth-kit": "^1.1.5",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.68.0",
     "react-icons": "^5.5.0",
